Calculated baseline for past proficiency

--- a/RandomForest/scantronReading_encoded.ipynb
+++ b/RandomForest/scantronReading_encoded.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,33 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1433"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Count rows where student was not proficient but had past proficient score > 1\n",
-    "len(scantronReading_38_encoded_df[(scantronReading_38_encoded_df['is_proficient'] == False) & \n",
-    "                                 (scantronReading_38_encoded_df['past_proficient_score'] > 1)])\n",
-    "\n",
-    "# Count rows where student ends up proficient but had past proficient score < 1\n",
-    "len(scantronReading_38_encoded_df[(scantronReading_38_encoded_df['is_proficient'] == True) & \n",
-    "                                 (scantronReading_38_encoded_df['past_proficient_score'] < 1)])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,6 +757,104 @@
     "y = scantronReading_38_encoded_df['proficient_score']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123, stratify=scantronReading_38_encoded_df['is_proficient'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Baseline for using past proficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not proficient to proficient\n",
+      "306\n",
+      "Proficient to not proficient\n",
+      "131\n",
+      "Size of test set\n",
+      "(4092, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = scantronReading_38_encoded_df\n",
+    "y = scantronReading_38_encoded_df[['proficient_score', 'past_proficient_score']]\n",
+    "\n",
+    "# Perform train-test split, retaining is_proficient in the test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2, \n",
+    "    random_state=123, \n",
+    "    stratify=scantronReading_38_encoded_df['is_proficient']\n",
+    ")\n",
+    "\n",
+    "print(\"Not proficient to proficient\")\n",
+    "print(sum((y_test['past_proficient_score'] < 1) & (y_test['proficient_score'] > 1)))\n",
+    "\n",
+    "print(\"Proficient to not proficient\")\n",
+    "print(sum((y_test['past_proficient_score'] >= 1) & (y_test['proficient_score'] < 1)))\n",
+    "\n",
+    "print(\"Size of test set\")\n",
+    "print(y_test.shape)\n",
+    "\n",
+    "X = scantronReading_38_encoded_df.drop(['studentId', 'dataSource', 'is_proficient', 'proficient_score', 'level'], axis=1)\n",
+    "y = scantronReading_38_encoded_df['proficient_score']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not proficient to proficient\n",
+      "619\n",
+      "Proficient to not proficient\n",
+      "1433\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count rows where student was not proficient but had past proficient score > 1\n",
+    "print(\"Not proficient to proficient\")\n",
+    "print(len(X_test[(scantronReading_38_encoded_df['is_proficient'] == False) & \n",
+    "                                 (y_test['proficient_score'] > 1)]))\n",
+    "\n",
+    "# Count rows where student ends up proficient but had past proficient score < 1\n",
+    "print(\"Proficient to not proficient\")\n",
+    "print(len(scantronReading_38_encoded_df[(scantronReading_38_encoded_df['is_proficient'] == True) & \n",
+    "                                 (scantronReading_38_encoded_df['past_proficient_score'] < 1)]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8997067448680351"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - ((619 + 1433)/20460)"
    ]
   },
   {
