--- a/DecisionTree/ScantronReading_encoded.ipynb
+++ b/DecisionTree/ScantronReading_encoded.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
-    "filename5 = os.path.join(os.getcwd(), \"dataframes\", \"scantronReading_38_encoded.csv\")\n",
-    "scantron_reading38_encoded_df = pd.read_csv(filename5, header = 0)"
+    "scantron_reading38_encoded_df = pd.read_csv('../dataframes/scantronReading_38_encoded.csv')"
    ]
   },
   {
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +483,7 @@
        "9            0                        0                0                    0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +529,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +575,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +717,7 @@
        "{'max_depth': 8, 'min_samples_leaf': 10}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -766,8 +765,8 @@
       "   macro avg       0.87      0.86      0.86      4554\n",
       "weighted avg       0.87      0.87      0.87      4554\n",
       "\n",
-      "[DT] Root Mean Squared Error: 0.07018344275590443\n",
-      "[DT] R2: 0.6001356746316768\n"
+      "[DT] Root Mean Squared Error: 0.0701822160720789\n",
+      "[DT] R2: 0.6001496523675779\n"
      ]
     }
    ],
@@ -796,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -872,18 +871,18 @@
      "text": [
       "                         Feature  Importance\n",
       "11         past_proficient_score    0.980743\n",
-      "15        subject_social-studies    0.009177\n",
+      "15        subject_social-studies    0.009321\n",
       "3     school_Elementary School F    0.002366\n",
-      "19               subject_phys-ed    0.002053\n",
+      "19               subject_phys-ed    0.002099\n",
       "9                    iready_math    0.001965\n",
       "8         school_Middle School F    0.000992\n",
       "5         school_Middle School A    0.000581\n",
       "7         school_Middle School D    0.000532\n",
       "4   school_Intermediate School E    0.000476\n",
       "2     school_Elementary School E    0.000433\n",
-      "14               subject_science    0.000231\n",
-      "12                  subject_math    0.000200\n",
       "1     school_Elementary School B    0.000133\n",
+      "12                  subject_math    0.000121\n",
+      "14               subject_science    0.000121\n",
       "6         school_Middle School C    0.000119\n",
       "0            school_Elementary A    0.000000\n",
       "17                   subject_art    0.000000\n",
@@ -905,6 +904,196 @@
     "\n",
     "# Display the sorted DataFrame\n",
     "print(importance_dfRead)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "w/o past_proficient "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of examples: 15180\n",
+      "(10626, 20)\n",
+      "(4554, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y= scantron_reading38_encoded_df['proficient_score']\n",
+    "X= scantron_reading38_encoded_df.drop(['proficient_score','is_proficient','studentId','dataSource','level','past_proficient_score'],  axis=1)\n",
+    "print(\"Number of examples: \" + str(X.shape[0]))\n",
+    "X_train,X_test, y_train,y_test = train_test_split(X,y, test_size=0.30, random_state=123)\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Grid Search\n",
+      "Done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 8, 'min_samples_leaf': 10}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#setting up the param grid, possible hyperparameter for max_depth and min_samples_leaf\n",
+    "max_depth_values = [8,12,25,32]\n",
+    "min_samples_leaf = [4,5,8,10]\n",
+    "param_grid = {'max_depth' : list(max_depth_values), 'min_samples_leaf' : list(min_samples_leaf)}\n",
+    "\n",
+    "#Grid Search to find the best hyperparameters \n",
+    "print(\"Running Grid Search\")\n",
+    "dt_regressor = DecisionTreeRegressor()\n",
+    "\n",
+    "# will have a 3-fold cross validation \n",
+    "dt_grid = GridSearchCV(dt_regressor, param_grid, cv=3, scoring='neg_root_mean_squared_error')\n",
+    "dt_grid_search = dt_grid.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Done\")\n",
+    "dt_best_params = dt_grid_search.best_params_\n",
+    "\n",
+    "dt_best_params_Read38En\n",
+    "#{'max_depth': 8, 'min_samples_leaf': 10}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "threshold= 1\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.61      1.00      0.76      2782\n",
+      "        True       0.65      0.01      0.02      1772\n",
+      "\n",
+      "    accuracy                           0.61      4554\n",
+      "   macro avg       0.63      0.50      0.39      4554\n",
+      "weighted avg       0.63      0.61      0.47      4554\n",
+      "\n",
+      "[DT] Root Mean Squared Error: 0.11065589314784754\n",
+      "[DT] R2: 0.005986188137553805\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_model = DecisionTreeRegressor(max_depth=8, min_samples_leaf=10)\n",
+    "dt_model.fit(X_train,y_train)\n",
+    "\n",
+    "#testing model on the X_test\n",
+    "y_dt_pred = dt_model.predict(X_test)\n",
+    "dt_rmse = mean_squared_error(y_test,y_dt_pred,squared=False)\n",
+    "dt_r2= r2_score(y_test,y_dt_pred)\n",
+    "\n",
+    "#trying to get f1 and accuracy score \n",
+    "threshold = 1\n",
+    "y_pred_bool = y_dt_pred >= threshold\n",
+    "y_test_bool = y_test >= threshold\n",
+    "\n",
+    "print(\"threshold=\", threshold)\n",
+    "# Print the classification report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_bool, y_pred_bool))\n",
+    "\n",
+    "print('[DT] Root Mean Squared Error: {0}'.format(dt_rmse))\n",
+    "print('[DT] R2: {0}'.format(dt_r2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Micro F1 Score: 0.6128678085199825\n"
+     ]
+    }
+   ],
+   "source": [
+    "#looking at the micro score\n",
+    "micro_f1 = f1_score(y_test_bool, y_pred_bool, average='micro')\n",
+    "\n",
+    "print(\"Micro F1 Score:\", micro_f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         Feature  Importance\n",
+      "9                    iready_math    0.221414\n",
+      "15                 subject_music    0.128227\n",
+      "13               subject_science    0.128141\n",
+      "5         school_Middle School A    0.126291\n",
+      "2     school_Elementary School E    0.123212\n",
+      "3     school_Elementary School F    0.095439\n",
+      "14        subject_social-studies    0.059004\n",
+      "8         school_Middle School F    0.045606\n",
+      "7         school_Middle School D    0.042650\n",
+      "18               subject_phys-ed    0.018193\n",
+      "1     school_Elementary School B    0.011824\n",
+      "0            school_Elementary A    0.000000\n",
+      "17       subject_performing-arts    0.000000\n",
+      "16                   subject_art    0.000000\n",
+      "10                iready_reading    0.000000\n",
+      "12               subject_reading    0.000000\n",
+      "11                  subject_math    0.000000\n",
+      "6         school_Middle School C    0.000000\n",
+      "4   school_Intermediate School E    0.000000\n",
+      "19           subject_career-prep    0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "importances2 = dt_model.feature_importances_\n",
+    "feature_names2 = X_train.columns\n",
+    "\n",
+    "# Combine names and importances, and sort\n",
+    "importance_df = pd.DataFrame({'Feature': feature_names2, 'Importance': importances2})\n",
+    "importance_df= importance_df.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Display the sorted DataFrame\n",
+    "print(importance_df)"
    ]
   }
  ],
