--- a/DecisionTree/ScantronMath_encoded.ipynb
+++ b/DecisionTree/ScantronMath_encoded.ipynb
@@ -691,6 +691,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>past_proficient_score</td>\n",
+       "      <td>0.973357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>subject_phys-ed</td>\n",
+       "      <td>0.004578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>school_Elementary School E</td>\n",
+       "      <td>0.004250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>subject_math</td>\n",
+       "      <td>0.003325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>subject_social-studies</td>\n",
+       "      <td>0.003270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>school_Middle School D</td>\n",
+       "      <td>0.003142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>school_Elementary School F</td>\n",
+       "      <td>0.001638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>subject_science</td>\n",
+       "      <td>0.001493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>school_Elementary A</td>\n",
+       "      <td>0.001194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>school_Middle School C</td>\n",
+       "      <td>0.001150</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Feature  Importance\n",
+       "11       past_proficient_score    0.973357\n",
+       "19             subject_phys-ed    0.004578\n",
+       "2   school_Elementary School E    0.004250\n",
+       "12                subject_math    0.003325\n",
+       "15      subject_social-studies    0.003270\n",
+       "7       school_Middle School D    0.003142\n",
+       "3   school_Elementary School F    0.001638\n",
+       "14             subject_science    0.001493\n",
+       "0          school_Elementary A    0.001194\n",
+       "6       school_Middle School C    0.001150"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#top ten features\n",
+    "importance_df.head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
