--- a/DecisionTree/ActMath.ipynb
+++ b/DecisionTree/ActMath.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,19 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
-    "filename3 = os.path.join(os.getcwd(),\"dataframes\", \"actMath_11.csv\")\n",
-    "actMath_11_df = pd.read_csv(filename3, header = 0)\n"
+    "actMath_11_df = pd.read_csv('../dataframes/actMath_11.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3665,7 +3664,7 @@
        "9             0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3676,7 +3675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3925,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3937,7 +3936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4187,7 +4186,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4199,7 +4198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4226,7 +4225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4240,10 +4239,10 @@
     {
      "data": {
       "text/plain": [
-       "{'max_depth': 25, 'min_samples_leaf': 10}"
+       "{'max_depth': 32, 'min_samples_leaf': 10}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4257,22 +4256,22 @@
     "\n",
     "#Grid Search to find the best hyperparameters \n",
     "print(\"Running Grid Search\")\n",
-    "dt_regressorRead = DecisionTreeRegressor()\n",
+    "dt_regressor = DecisionTreeRegressor()\n",
     "\n",
     "# will have a 3-fold cross validation \n",
-    "dt_grid = GridSearchCV(dt_regressorRead, param_grid, cv=3, scoring='neg_root_mean_squared_error')\n",
+    "dt_grid = GridSearchCV(dt_regressor, param_grid, cv=3, scoring='neg_root_mean_squared_error')\n",
     "dt_grid_search = dt_grid.fit(X_train, y_train)\n",
     "\n",
     "print(\"Done\")\n",
-    "dt_best_paramsRead = dt_grid_search.best_params_\n",
+    "dt_best_params = dt_grid_search.best_params_\n",
     "\n",
-    "dt_best_paramsRead\n",
+    "dt_best_params\n",
     "#{'max_depth': 25, 'min_samples_leaf': 4}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4291,8 +4290,8 @@
       "   macro avg       0.77      0.72      0.73       516\n",
       "weighted avg       0.77      0.77      0.76       516\n",
       "\n",
-      "[DT] Root Mean Squared Error: 0.1959185845069622\n",
-      "[DT] R2: 0.3285939154210934\n"
+      "[DT] Root Mean Squared Error: 0.19591858450696217\n",
+      "[DT] R2: 0.3285939154210935\n"
      ]
     }
    ],
@@ -4321,7 +4320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4340,7 +4339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4387,7 +4386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4407,17 +4406,17 @@
       "24     course_Alg II/Trig    0.015215\n",
       "113    course_Health 9-12    0.015075\n",
       "196    course_US His-1877    0.013439\n",
-      "200    course_USHis InD-P    0.012108\n",
+      "82    course_English Gr11    0.012108\n",
       "183   course_StudyHall912    0.010276\n",
       "132   course_LIFEPE9-12.5    0.010222\n",
       "189   course_TmSpts-Dance    0.008056\n",
       "76    course_Eng Gr10 Adv    0.008009\n",
-      "105   course_Geometry Adv    0.007661\n",
+      "105   course_Geometry Adv    0.007657\n",
       "56    course_CareerPrep-B    0.007650\n",
       "61    course_ContempIss1C    0.007505\n",
       "131   course_LIFE PE 9-12    0.007139\n",
-      "68      course_DRIVERS ED    0.007131\n",
       "198    course_USHis I Adv    0.006356\n",
+      "68      course_DRIVERS ED    0.006298\n",
       "96    course_Food Nutritn    0.005866\n",
       "231  school_High School A    0.005792\n",
       "177      course_Spanish 1    0.005786\n",
@@ -4425,13 +4424,13 @@
       "235           iready_math    0.004531\n",
       "186      course_Theatre I    0.004310\n",
       "166     course_Psychology    0.004066\n",
-      "104       course_Geometry    0.003795\n",
+      "104       course_Geometry    0.003799\n",
       "22     course_Agriscience    0.003653\n",
-      "67     course_D&TSafetyEd    0.003491\n",
+      "67     course_D&TSafetyEd    0.003493\n",
       "205     course_VarBsbalII    0.003483\n",
       "112   course_HS US 10 ADV    0.003119\n",
       "181    course_Spo&En Mktg    0.003065\n",
-      "139   course_Mnt Lt Rpr B    0.002978\n",
+      "138   course_Mnt Lt Rpr A    0.002978\n",
       "197   course_USHis 1877-P    0.002629\n",
       "158   course_Physical Sci    0.002432\n",
       "95       course_Food Inno    0.002269\n",
@@ -4440,82 +4439,81 @@
       "94        course_Fit/Cond    0.001670\n",
       "91            course_FACS    0.001242\n",
       "199    course_USHis I G10    0.001035\n",
+      "109    course_HEALTH 9-12    0.000834\n",
       "178      course_Spanish 2    0.000768\n",
       "236        iready_reading    0.000729\n",
       "209        course_VarFBII    0.000258\n",
-      "233  school_High School C    0.000167\n",
+      "234  school_High School D    0.000249\n",
       "117   course_IT Fndamntls    0.000163\n",
-      "234  school_High School D    0.000067\n",
-      "147   course_Mustang Advi    0.000016\n",
-      "153    course_Panther Adv    0.000002\n",
-      "154    course_Per Finance    0.000000\n",
-      "136     course_Marine Sci    0.000000\n",
-      "167   course_R/DinPhysics    0.000000\n",
-      "133    course_MARKET PRIN    0.000000\n",
-      "165   course_Psycholog.5C    0.000000\n",
-      "164    course_PsychACCESS    0.000000\n",
-      "134    course_MarchAux.5C    0.000000\n",
-      "163    course_Psyc AP Acc    0.000000\n",
-      "162   course_Prn Pub Serv    0.000000\n",
-      "149      course_NCCER ET2    0.000000\n",
-      "150    course_NCCER Wldg1    0.000000\n",
       "161   course_Plumb/PipeII    0.000000\n",
+      "164    course_PsychACCESS    0.000000\n",
+      "162   course_Prn Pub Serv    0.000000\n",
+      "168    course_RdIntrv7-12    0.000000\n",
+      "167   course_R/DinPhysics    0.000000\n",
+      "163    course_Psyc AP Acc    0.000000\n",
+      "165   course_Psycholog.5C    0.000000\n",
+      "153    course_Panther Adv    0.000000\n",
       "160   course_Plumb/Pipe I    0.000000\n",
+      "145   course_MusicThry AP    0.000000\n",
+      "134    course_MarchAux.5C    0.000000\n",
       "135     course_MarchAux1C    0.000000\n",
+      "136     course_Marine Sci    0.000000\n",
       "137     course_Mktng Prin    0.000000\n",
-      "155     course_Percuss 1C    0.000000\n",
-      "151    course_NCCER Wldg2    0.000000\n",
-      "138   course_Mnt Lt Rpr A    0.000000\n",
-      "152       course_Painting    0.000000\n",
+      "139   course_Mnt Lt Rpr B    0.000000\n",
       "140   course_Multimed Des    0.000000\n",
       "141   course_Multimed Pub    0.000000\n",
-      "146   course_MusicalDrama    0.000000\n",
-      "148      course_NCCER ET1    0.000000\n",
-      "168    course_RdIntrv7-12    0.000000\n",
-      "145   course_MusicThry AP    0.000000\n",
       "143   course_MusicTheatre    0.000000\n",
-      "157   course_PhySciACCESS    0.000000\n",
       "144   course_MusicTherI.5    0.000000\n",
+      "146   course_MusicalDrama    0.000000\n",
       "159      course_Piano .5C    0.000000\n",
-      "224     course_W H 1500-P    0.000000\n",
+      "147   course_Mustang Advi    0.000000\n",
+      "148      course_NCCER ET1    0.000000\n",
+      "149      course_NCCER ET2    0.000000\n",
+      "150    course_NCCER Wldg1    0.000000\n",
+      "151    course_NCCER Wldg2    0.000000\n",
+      "152       course_Painting    0.000000\n",
+      "154    course_Per Finance    0.000000\n",
+      "155     course_Percuss 1C    0.000000\n",
+      "157   course_PhySciACCESS    0.000000\n",
       "169   course_Robotics App    0.000000\n",
+      "0       course_ACT Review    0.000000\n",
       "170   course_SPAN II ACCE    0.000000\n",
-      "229   course_Yearbook9-12    0.000000\n",
-      "204      course_VarBsbalI    0.000000\n",
-      "206      course_VarBsblIV    0.000000\n",
-      "207     course_VarCheerII    0.000000\n",
+      "220      course_Vocal I 1    0.000000\n",
       "208         course_VarFBI    0.000000\n",
       "210       course_VarFBIII    0.000000\n",
       "211       course_VarSocII    0.000000\n",
       "212       course_VarSofII    0.000000\n",
       "213      course_VarVbalII    0.000000\n",
-      "228   course_YearbkII9-12    0.000000\n",
       "214        course_VarWrII    0.000000\n",
       "215     course_Vis Arts I    0.000000\n",
       "216    course_Vis Arts II    0.000000\n",
       "217   course_Vis Arts III    0.000000\n",
-      "227   course_WebDesignIAC    0.000000\n",
-      "226   course_WH1500-P Adv    0.000000\n",
-      "225   course_WH 1500-P-CR    0.000000\n",
       "219    course_VisArtII.5C    0.000000\n",
-      "220      course_Vocal I 1    0.000000\n",
       "221    course_Vocal I 1/2    0.000000\n",
-      "222     course_Vocal II 1    0.000000\n",
-      "203     course_VarBkbalII    0.000000\n",
-      "202      course_VarBkbalI    0.000000\n",
-      "201   course_USHisIG10ACC    0.000000\n",
-      "182    course_StuAiOff912    0.000000\n",
       "171      course_SPANISH I    0.000000\n",
+      "222     course_Vocal II 1    0.000000\n",
+      "223    course_Vocal III 1    0.000000\n",
+      "224     course_W H 1500-P    0.000000\n",
+      "225   course_WH 1500-P-CR    0.000000\n",
+      "226   course_WH1500-P Adv    0.000000\n",
+      "227   course_WebDesignIAC    0.000000\n",
+      "228   course_YearbkII9-12    0.000000\n",
+      "229   course_Yearbook9-12    0.000000\n",
+      "230    course_YrbkIII9-12    0.000000\n",
+      "233  school_High School C    0.000000\n",
+      "207     course_VarCheerII    0.000000\n",
+      "206      course_VarBsblIV    0.000000\n",
+      "204      course_VarBsbalI    0.000000\n",
+      "203     course_VarBkbalII    0.000000\n",
       "172     course_SPANISH II    0.000000\n",
       "173      course_Sociology    0.000000\n",
       "174   course_SociologyACC    0.000000\n",
       "175    course_Span2ACCESS    0.000000\n",
       "176       course_SpanIACC    0.000000\n",
-      "223    course_Vocal III 1    0.000000\n",
       "179      course_Spanish 3    0.000000\n",
       "180       course_Speech 1    0.000000\n",
+      "133    course_MARKET PRIN    0.000000\n",
       "184   course_TA-Partridge    0.000000\n",
-      "230    course_YrbkIII9-12    0.000000\n",
       "185   course_Tech Theater    0.000000\n",
       "187     course_Theatre II    0.000000\n",
       "188         course_TmSpts    0.000000\n",
@@ -4525,10 +4523,14 @@
       "193   course_TranSer El.5    0.000000\n",
       "194      course_TranSer10    0.000000\n",
       "195   course_Travl Tour I    0.000000\n",
-      "0       course_ACT Review    0.000000\n",
+      "200    course_USHis InD-P    0.000000\n",
+      "201   course_USHisIG10ACC    0.000000\n",
+      "202      course_VarBkbalI    0.000000\n",
+      "182    course_StuAiOff912    0.000000\n",
       "119      course_Inet Mktg    0.000000\n",
       "130   course_LAW IN SOCIE    0.000000\n",
-      "32     course_Anat/Physio    0.000000\n",
+      "129    course_LATIN 1 ACC    0.000000\n",
+      "33    course_Anthropology    0.000000\n",
       "34         course_Art App    0.000000\n",
       "35      course_BAND MARCH    0.000000\n",
       "36     course_BANDCONCERT    0.000000\n",
@@ -4551,11 +4553,10 @@
       "55    course_CareerPrep-A    0.000000\n",
       "57       course_Chemistry    0.000000\n",
       "59    course_Const Fin In    0.000000\n",
-      "60     course_Const Frmng    0.000000\n",
-      "33    course_Anthropology    0.000000\n",
+      "32     course_Anat/Physio    0.000000\n",
       "31    course_AlgebraicCon    0.000000\n",
-      "129    course_LATIN 1 ACC    0.000000\n",
       "30      course_Algebra II    0.000000\n",
+      "13    course_AcAdv.Baseba    0.000000\n",
       "2     course_ACTReview.5C    0.000000\n",
       "3     course_AG Communica    0.000000\n",
       "4        course_AIDE-ELEM    0.000000\n",
@@ -4566,8 +4567,8 @@
       "10    course_ARMY LET III    0.000000\n",
       "11     course_ARMY LET IV    0.000000\n",
       "12    course_ARMYLETIVACT    0.000000\n",
-      "13    course_AcAdv.Baseba    0.000000\n",
       "14    course_AcAdv.Basket    0.000000\n",
+      "28     course_Algebra I A    0.000000\n",
       "15    course_AcAdv.CrossC    0.000000\n",
       "16     course_AcAdv.Footb    0.000000\n",
       "17    course_AcAdv.Softba    0.000000\n",
@@ -4578,11 +4579,10 @@
       "25    course_AlgEnrichmet    0.000000\n",
       "26    course_AlgII/TrigAC    0.000000\n",
       "27       course_Algebra I    0.000000\n",
-      "28     course_Algebra I A    0.000000\n",
+      "60     course_Const Frmng    0.000000\n",
       "62    course_Crea Writing    0.000000\n",
       "63     course_CreatWrt.5C    0.000000\n",
-      "64    course_Credit Recov    0.000000\n",
-      "65      course_Culinary I    0.000000\n",
+      "115   course_Hosp Tourism    0.000000\n",
       "100    course_FrenchIACCE    0.000000\n",
       "101   course_Fund Agrisci    0.000000\n",
       "102       course_GEOM ADV    0.000000\n",
@@ -4590,12 +4590,11 @@
       "106   course_GeometryACCE    0.000000\n",
       "107   course_German1ACCES    0.000000\n",
       "108         course_Guitar    0.000000\n",
-      "109    course_HEALTH 9-12    0.000000\n",
       "110   course_HEALTH ACCES    0.000000\n",
       "111   course_HISTUS1877AC    0.000000\n",
       "114   course_HealthACCESS    0.000000\n",
-      "115   course_Hosp Tourism    0.000000\n",
       "116   course_INFO SUP SVC    0.000000\n",
+      "98        course_Forestry    0.000000\n",
       "118   course_IT Supp/Serv    0.000000\n",
       "1      course_ACT/WK Rev.    0.000000\n",
       "120   course_Int Ad Desgn    0.000000\n",
@@ -4607,9 +4606,10 @@
       "127    course_Journal1ACC    0.000000\n",
       "128   course_Journalism 1    0.000000\n",
       "99     course_Found AAVTC    0.000000\n",
-      "98        course_Forestry    0.000000\n",
       "97    course_For/Cri Inve    0.000000\n",
-      "79    course_EnglGr10ACCE    0.000000\n",
+      "64    course_Credit Recov    0.000000\n",
+      "78    course_EngLang,BS10    0.000000\n",
+      "65      course_Culinary I    0.000000\n",
       "66     course_Culinary II    0.000000\n",
       "69      course_Dance 9-12    0.000000\n",
       "70     course_Digitl Dsgn    0.000000\n",
@@ -4619,11 +4619,10 @@
       "74      course_Eng Ess 10    0.000000\n",
       "75      course_Eng Ess 11    0.000000\n",
       "77       course_EngGr9-CR    0.000000\n",
-      "78    course_EngLang,BS10    0.000000\n",
-      "80    course_English Gr 9    0.000000\n",
+      "79    course_EnglGr10ACCE    0.000000\n",
       "93    course_Fit Life .5C    0.000000\n",
+      "80    course_English Gr 9    0.000000\n",
       "81    course_English Gr10    0.000000\n",
-      "82    course_English Gr11    0.000000\n",
       "83    course_Enrichmt6-12    0.000000\n",
       "85    course_Ess II:USHis    0.000000\n",
       "86     course_Ess: E & SS    0.000000\n",
