--- a/DecisionTree/ActScience.ipynb
+++ b/DecisionTree/ActScience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[10 rows x 241 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Principal Component</th>\n",
+       "      <th>Top Feature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>course_HEALTH 9-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>course_DRIVERS ED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>school_High School B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>course_D&amp;TSafetyEd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PC1</td>\n",
+       "      <td>course_Health 9-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>course_Physical Sci</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>course_English Gr10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>course_Algebra I B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>course_USHis I G10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PC2</td>\n",
+       "      <td>course_US His-1877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>course_Eng Gr10 Adv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>course_ChemistryAdv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>course_USHis I Adv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>course_HS US 10 ADV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PC3</td>\n",
+       "      <td>course_D&amp;TSafetyEd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>PC4</td>\n",
+       "      <td>course_Ess II:USHis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PC4</td>\n",
+       "      <td>course_Ess: Phy Sci</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PC4</td>\n",
+       "      <td>course_Eng Ess 10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Principal Component           Top Feature\n",
+       "0                  PC1    course_HEALTH 9-12\n",
+       "1                  PC1     course_DRIVERS ED\n",
+       "2                  PC1  school_High School B\n",
+       "3                  PC1    course_D&TSafetyEd\n",
+       "4                  PC1    course_Health 9-12\n",
+       "5                  PC2   course_Physical Sci\n",
+       "6                  PC2   course_English Gr10\n",
+       "7                  PC2    course_Algebra I B\n",
+       "8                  PC2    course_USHis I G10\n",
+       "9                  PC2    course_US His-1877\n",
+       "10                 PC3   course_Eng Gr10 Adv\n",
+       "11                 PC3   course_ChemistryAdv\n",
+       "12                 PC3    course_USHis I Adv\n",
+       "13                 PC3   course_HS US 10 ADV\n",
+       "14                 PC3    course_D&TSafetyEd\n",
+       "15                 PC4   course_Ess II:USHis\n",
+       "16                 PC4   course_Ess: Phy Sci\n",
+       "17                 PC4     course_Eng Ess 10"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_features_df.head(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +836,7 @@
        "{'max_depth': 32, 'min_samples_leaf': 8}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -728,8 +884,8 @@
       "   macro avg       0.76      0.70      0.69       516\n",
       "weighted avg       0.75      0.72      0.70       516\n",
       "\n",
-      "[DT] Root Mean Squared Error: 0.21206726907156068\n",
-      "[DT] R2: 0.3410802431484852\n"
+      "[DT] Root Mean Squared Error: 0.2120098059236692\n",
+      "[DT] R2: 0.3414372852673967\n"
      ]
     },
     {
@@ -766,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +996,7 @@
        "Length: 241, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +1064,7 @@
        "{'max_depth': 12, 'min_samples_leaf': 4}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -957,8 +1113,8 @@
       "   macro avg       0.72      0.65      0.64       516\n",
       "weighted avg       0.71      0.69      0.66       516\n",
       "\n",
-      "[DT] Root Mean Squared Error: 0.22647605575922677\n",
-      "[DT] R2: 0.2798660846988871\n"
+      "[DT] Root Mean Squared Error: 0.2264760557592268\n",
+      "[DT] R2: 0.27986608469888696\n"
      ]
     },
     {
@@ -995,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1036,10 +1192,10 @@
       "40    course_BandConcer.5    0.041733\n",
       "23    course_Alg Esntls B    0.027396\n",
       "..                    ...         ...\n",
-      "230    course_YrbkIII9-12    0.000000\n",
-      "233  school_High School C    0.000000\n",
-      "232  school_High School B    0.000000\n",
+      "225   course_WH 1500-P-CR    0.000000\n",
+      "223    course_Vocal III 1    0.000000\n",
       "231  school_High School A    0.000000\n",
+      "230    course_YrbkIII9-12    0.000000\n",
       "237          bbb_literacy    0.000000\n",
       "\n",
       "[238 rows x 2 columns]\n"
@@ -1060,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1135,9 +1291,9 @@
        "      <td>0.021121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>course_USHis I Adv</td>\n",
-       "      <td>0.018420</td>\n",
+       "      <th>80</th>\n",
+       "      <td>course_English Gr 9</td>\n",
+       "      <td>0.017896</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1154,10 +1310,10 @@
        "76   course_Eng Gr10 Adv    0.023848\n",
        "208        course_VarFBI    0.021303\n",
        "123  course_Intermed Agr    0.021121\n",
-       "198   course_USHis I Adv    0.018420"
+       "80   course_English Gr 9    0.017896"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
