--- a/DecisionTree/ActMath.ipynb
+++ b/DecisionTree/ActMath.ipynb
@@ -4565,6 +4565,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using all columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -5207,6 +5214,13 @@
     "\n",
     "print('[DT] Root Mean Squared Error: {0}'.format(dt_rmse))\n",
     "print('[DT] R2: {0}'.format(dt_r2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metrics"
    ]
   },
   {
